src/test/resources/delivery2/expressions/invalid/semantic/relational/comparingIntAndBoolean.pas
program Demo;
var
  x, y, z : integer;
  a : boolean;
begin
    a := 100 > true;
    writeln(a)
end.